--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Task-BeLike-MSCHOUT
 {{$NEXT}}
     - add deps:
         - Dist::Zilla::Plugin::CopyFilesFromBuild
+        - WWW::Shorten, Config::Auto (needed for shorten app config file)
 
 1.130940  2013-04-04
     - update deps
