--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Task-BeLike-MSCHOUT
 
+1.162770  2016-10-03
+    - add deps:
+        - Dist::Zilla::Plugin::CopyFilesFromBuild
+        - WWW::Shorten, Config::Auto (needed for shorten app config file)
+
 1.130940  2013-04-04
     - update deps
 
